package com.example.reportsfordrivers

object Tags {
    const val TAG_COLUMN_FIRST_ENTRY: String = "tagColumnFirstEntry"
    const val TAG_TEST_FIRST_ENTRY_LAST_NAME: String = "tagTestFirstEntryLastName"
    const val TAG_TEST_FIRST_ENTRY_FIRST_NAME: String = "tagTestFirstEntryFirstName"
    const val TAG_TEST_FIRST_ENTRY_PATRONYMIC: String = "tagTestFirstEntryPatronymic"
    const val TAG_TEST_FIRST_ENTRY_MAKE: String = "tagTestFirstEntryMake"
    const val TAG_TEST_FIRST_ENTRY_RN: String = "tagTestFirstEntryRn"
    const val TAG_TEST_FIRST_ENTRY_TABLE: String = "tagTestFirstEntryTable"
    const val TAG_TEST_FIRST_ENTRY_BUTTON_TABLE: String = "tagTestFirstEntryButtonTable"

    const val TAG_TEST_PROGRESS_REPORTS_COUNTRY: String = "tagTestProgressReportsCountry"
    const val TAG_TEST_PROGRESS_REPORTS_TOWNSHIP_ONE: String = "tagTestProgressReportsTownshipOne"
    const val TAG_TEST_PROGRESS_REPORTS_TOWNSHIP_TWO: String = "tagTestProgressReportsTownshipTwo"
    const val TAG_TEST_PROGRESS_REPORTS_DISTANCE: String = "tagTestProgressReportsDistance"
    const val TAG_TEST_PROGRESS_REPORTS_CARGO_WEIGHT: String = "tagTestProgressReportsCargoWeight"

    const val TAG_TEST_DATA_REPORT_INFO_MAIN_CITY: String = "tagTestDataReportInfoMainCity"
    const val TAG_TEST_DATA_REPORT_INFO_WAYBILL: String = "tagTestDataReportInfoWaybill"
    const val TAG_TEST_DATA_REPORT_INFO_DATE: String = "tagTestDataReportInfoDate"

    const val TAG_TEST_DATA_PERSONAL_INFO_LAST_NAME: String = "tagTestDataPersonalInfoLastName"
    const val TAG_TEST_DATA_PERSONAL_INFO_FIRST_NAME: String = "tagTestDataPersonalInfoFirstName"
    const val TAG_TEST_DATA_PERSONAL_INFO_PATRONYMIC: String = "tagTestDataPersonalInfoPatronymic"

    const val TAG_TEST_DATA_VEHICLE_INFO_MAKE_VEHICLE: String = "tagTestDataVehicleInfoMakeVehicle"
    const val TAG_TEST_DATA_VEHICLE_INFO_RN_VEHICLE: String = "tagTestDataVehicleInfoRnVehicle"
    const val TAG_TEST_DATA_VEHICLE_INFO_MAKE_TRAILER: String = "tagTestDataVehicleInfoMakeTrailer"
    const val TAG_TEST_DATA_VEHICLE_INFO_RN_TRAILER: String = "tagTestDataVehicleInfoRnTrailer"

    const val TAG_TEST_DATA_FILLING_TWO_ROUTE: String = "tagTestDataFillingTwoRoute"
    const val TAG_TEST_DATA_FILLING_TWO_DATE_DEPARTURE = "tagTestDataFillingTwoDateDeparture"
    const val TAG_TEST_DATA_FILLING_TWO_DATE_RETURN = "tagTestDataFillingTwoDateReturn"
    const val TAG_TEST_DATA_FILLING_TWO_DATE_CROSSING_DEPARTURE =
        "tagTestDataFillingTwoDateCrossingDeparture"
    const val TAG_TEST_DATA_FILLING_TWO_DATE_CROSSING_RETURN =
        "tagTestDataFillingTwoDateCrossingReturn"
    const val TAG_TEST_DATA_FILLING_TWO_SPEEDOMETER_DEPARTURE: String =
        "tagTestDataFillingTwoSpeedometerDeparture"
    const val TAG_TEST_DATA_FILLING_TWO_SPEEDOMETER_RETURN: String =
        "tagTestDataFillingTwoSpeedometerReturn"
    const val TAG_TEST_DATA_FILLING_TWO_FUELLED: String = "tagTestDataFillingTwoFuelled"

    const val TAG_TEST_EXPENSES_DOCUMENT_NUMBER: String = "tagTestExpensesDocumentNumber"
    const val TAG_TEST_EXPENSES_EXPENSE_ITEM: String = "tagTestExpensesExpenseItem"
    const val TAG_TEST_EXPENSES_SUM: String = "tagTestExpensesSum"
    const val TAG_TEST_EXPENSES_CURRENCY: String = "tagTestExpensesCurrency"

    const val TAG_TEST_PREVIEW_REPORT_NAME: String = "tagTestPreviewReportName"

    const val TAG_TEST_SETTING_DATA_VEHICLE_MAKE: String = "tagTestSettingDataVehicleMake"
    const val TAG_TEST_SETTING_DATA_VEHICLE_RN: String = "tagTestSettingDataVehicleRn"
    const val TAG_TEST_SETTING_DATA_RADIO_BUTTON_VEHICLE: String =
        "tagTestSettingDataRadioButtonVehicle"
    const val TAG_TEST_SETTING_DATA_RADIO_BUTTON_TRAILER: String =
        "tagTestSettingDataRadioButtonTrailer"

    const val TAG_TEST_SETTING_PERSONAL_DATA_LAST_NAME: String =
        "tagTestSettingPersonalDataLastName"
    const val TAG_TEST_SETTING_PERSONAL_DATA_FIRST_NAME: String =
        "tagTestSettingPersonalDataFirstName"
    const val TAG_TEST_SETTING_PERSONAL_DATA_PATRONYMIC: String =
        "tagTestSettingPersonalDataPatronymic"

    const val TAG_TEST_SETTING_FEEDBACK_YOUR_NAME: String = "tagTestSettingFeedbackYourName"
    const val TAG_TEST_SETTING_FEEDBACK_YOUR_EMAIL: String = "tagTestSettingFeedbackYourEmail"
    const val TAG_TEST_SETTING_FEEDBACK_TEXT: String = "tagTestSettingFeedbackText"

    const val TAG_TEST_DATE_DEPARTURE = "tagTestDateDeparture"
    const val TAG_TEST_DATE_RETURN = "tagTestDateReturn"
    const val TAG_TEST_DATE_CROSSING_DEPARTURE = "tagTestDateCrossingDeparture"
    const val TAG_TEST_DATE_CROSSING_RETURN = "tagTestDateCrossingReturn"

    const val TAG_TEST_PROGRESS_REPORTS_DATE = "tagTestProgressReportsDate"
    const val TAG_TEST_TRIP_EXPENSES_DATE = "tagTestTripExpensesDate"
}