<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy reports</string>

    <string name="driver_report">Business trip report</string>
    <string name="history_report">History Reports</string>

    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="patronymic">Patronymic</string>
    <string name="add_makes_registration_vehicles_trailers">Makes and license plates
        of vehicles (trailers):</string>
    <string name="vehicle">Vehicle</string>
    <string name="trailer">Trailer</string>
    <string name="make_vehicle_trailer">Make of the vehicle / trailer</string>
    <string name="make_vehicle">Make of the vehicle</string>
    <string name="make_trailer">Make of the trailer</string>
    <string name="registration_number_vehicle">Registration number of the vehicle</string>
    <string name="registration_number_trailer">Registration number of the trailer</string>
    <string name="rn_vehicle_trailer">R/n of the vehicle / trailer</string>
    <string name="rn_vehicle">R/n of the vehicle</string>
    <string name="rn_trailer">R/n of the trailer</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="make">Make</string>
    <string name="rn">R/n</string>
    <string name="save_entered_data">Save the entered data?</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="save_file">Save file</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="info">Info</string>
    <string name="clear">Clear</string>
    <string name="driver">Driver:</string>



    <string name="create_report">Create report</string>
    <string name="be_continued">To be continued</string>
    <string name="report_history">Report history</string>
    <string name="settings">Settings</string>



    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="data_filling">Data filling</string>
    <string name="route">Route</string>
    <string name="date_departure">Date of departure</string>
    <string name="date_return">Date of return</string>
    <string name="date_border_crossing_departure">Date of border crossing on departure</string>
    <string name="date_border_crossing_return">Date of border crossing on return</string>
    <string name="speedometer_reading_departure">Speedometer reading on departure</string>
    <string name="speedometer_reading_return">Speedometer reading on return</string>
    <string name="fuelled">Fuelled, litres</string>
    <string name="progress_report">Progress report</string>
    <string name="country">Country</string>
    <string name="township">Township</string>
    <string name="township_one">Township one</string>
    <string name="township_two">Township two</string>
    <string name="townships">Townships</string>
    <string name="distance">Distance, km</string>
    <string name="cargo_weight">Weight, t</string>
    <string name="preview">Preview</string>
    <string name="reports_name">Reports name</string>
    <string name="result">Result</string>
    <string name="share">Share</string>
    <string name="create_new_report">Create a new report</string>
    <string name="come_out">Come out</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="data">Data</string>
    <string name="stages_movement">Stages of the movement</string>
    <string name="business_trip_expenses">Business trip expenses</string>
    <string name="current_date">Current date</string>
    <string name="document_number">Document number</string>
    <string name="expense_item">Expense item</string>
    <string name="sum">Sum</string>
    <string name="currency">Currency</string>
    <string name="waybill">Waybill</string>
    <string name="date_create_report">Date the report was created</string>

    <string name="empty_create_first_report">Empty? Create your first report</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>




    <string name="cancel">Cancel</string>
    <string name="your_name">Your name</string>
    <string name="your_contact_email">Your contact email</string>
    <string name="text_appeal">Text of the appeal</string>
    <string name="attach_file">Attach file</string>
    <string name="attached_files">Attached files:</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>

    <string name="back_button">Back</string>

    <string name="test">TEST</string>
    <string name="vehicle_test">VEHICLE</string>
    <string name="trailer_test">TRAILER</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deletion">Deletion</string>

    <string name="report_information">Report information</string>
    <string name="personal_information">Personal information</string>
    <string name="vehicle_trailer_information">Vehicle and trailer info</string>

    <string name="load_date">Load date</string>
    <string name="select_date">Select date</string>
    <string name="missing_from_list_create">Missing from the list? Create</string>
    <string name="calendar">Calendar</string>


    <!-- FirstEntryTwo -->
    <string name="report_language">Report language:</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="select_currency">Select currency:</string>
    <string name="make_list_favorite_countries_cities">
        Make a list of favorite countries and cities
    </string>
    <string name="countries">Countries</string>
    <string name="cities">Cities</string>
    <string name="add_city">Add city</string>
    <string name="name_city">Name of the city</string>
    <string name="name_country">Country name</string>
    <string name="not_list_add">Not on the list? Add</string>


    <!-- CreateReportsDataVehicleInfoScreen -->
    <string name="enter_make_number_vehicle">Enter the make and state number of the vehicle</string>
    <string name="enter_make_number_trailer">Enter the make and state number of the trailer</string>


    <!-- SettingMainMenu -->
    <string name="personal_data">Personal data</string>
    <string name="data_vehicles_trailers">Data on vehicles and trailers</string>
    <string name="countries_cities">Countries and cities</string>
    <string name="default_currency">Default currency</string>
    <string name="dark_theme">Dark theme</string>
    <string name="information">Information</string>
    <string name="send_questions_suggestions">Send questions or suggestions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="light_theme">Light theme</string>
    <string name="system_default">System default</string>
    <string name="app_name_version">Easy reports. Version: 1.0.0</string>
    <string name="text_information">We help create reports for drivers and workers in other areas.
        Allows you to easily and quickly create reports.</string>
    <string name="setting_save_restart_application">Settings have been saved. You must restart the
        application to take effect</string>
    <string name="choosing_theme">Choosing a theme</string>
    <string name="selecting_report_language">Selecting the report language</string>

    <!-- SettingCountriesCitiesScreen -->
    <string name="alphabetically">Alphabetically</string>
    <string name="by_popularity">By popularity</string>
    <string name="favorite">Favorite</string>

    <!-- HistoryReportsList -->
    <string name="export_to_word">Export to MS Word</string>

</resources>